Fixes #1937 and fixes #1823, taq fund and taq run

--- a/website/docs/plugins/plugin-flextesa.mdx
+++ b/website/docs/plugins/plugin-flextesa.mdx
@@ -107,31 +107,31 @@ Taqueria provides five default declared accounts in the default configuration:
 "accounts": {
         "bob": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "alice": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "john": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "jane": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "joe": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         }
