--- a/website/docs/config/config-files.mdx
+++ b/website/docs/config/config-files.mdx
@@ -19,31 +19,31 @@ The settings in the `config.json` are used by various taqueria plugins. Each plu
     "accounts": {
         "bob": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "alice": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "john": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "jane": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         },
         "joe": {
             "balance": {
-                "amount": "3_000_000_000",
+                "amount": "30_000_000",
                 "units": "mutez"
             }
         }
