Moved from pinnacle-labs to TezosTaqueria org

--- a/website/docs/data-collection-policy.mdx
+++ b/website/docs/data-collection-policy.mdx
@@ -17,4 +17,4 @@ With consent, Taqueria will collect anonymous usage statistics. Taqueria collect
 
 ## Privacy Policy
 
-Taqueria is committed to preserving user privacy and gathering usage analytics in compliance with the [ECAD Labs privacy policy](http://pinnaclelabs.limited/privacy)
+Taqueria is committed to preserving user privacy and gathering usage analytics in compliance with the [Trilitech Labs privacy policy](https://trili.tech/privacy-policy)
