--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -77,7 +77,7 @@ To install, we recommend our one-line installer:
 For MacOS installations, we recommend using [Homebrew](https://brew.sh):
 
 ```shell
-brew tap pinnacle-labs/taqueria https://github.com/pinnacle-labs/taqueria
+brew tap TezosTaqueria/taqueria https://github.com/TezosTaqueria/taqueria
 brew install taqueria
 ```
 </TabItem>
