--- a/website/docs/plugins/plugin-tzcompose.mdx
+++ b/website/docs/plugins/plugin-tzcompose.mdx
@@ -3,7 +3,7 @@ title: '@taqueria/plugin-tzcompose'
 ---
 
 :::caution
-This plugin is still in early development. Please submit issues and feature requests [here](https://github.com/pinnacle-labs/taqueria).
+This plugin is still in early development. Please submit issues and feature requests [here](https://github.com/tezostaqueria/taqueria).
 :::
 
 The Tzcompose plugin integrates Tzcompose, a powerful automation framework developed by Blockwatch for executing complex transaction sequences on Tezos, into the Taqueria development environment.
@@ -24,7 +24,7 @@ taq init # if the project isn't already initialized
 taq install @taqueria/plugin-tzcompose
 ```
 
-Alternatively, you can use the `Getting Started with Taqueria and TzCompose` scaffold to quickly set up a project with Tzcompose integrated. Visit [https://github.com/pinnacle-labs/taqueria-getting-started-tzcompose-scaffold](https://github.com/pinnacle-labs/taqueria-getting-started-tzcompose-scaffold) to learn more.
+Alternatively, you can use the `Getting Started with Taqueria and TzCompose` scaffold to quickly set up a project with Tzcompose integrated. Visit [https://github.com/tezostaqueria/taqueria-getting-started-tzcompose-scaffold](https://github.com/tezostaqueria/taqueria-getting-started-tzcompose-scaffold) to learn more.
 
 ## The `taq tzcompose` Task
 
@@ -48,4 +48,4 @@ For detailed information on creating YAML files to define your Tzcompose pipelin
 
 This plugin is developed for Taqueria, built on Node.js using the Taqueria Node SDK, and distributed via NPM.
 
-The plugin is written in TypeScript and compiled to a JavaScript bundle for Node.js using [tsup](https://github.com/egoist/tsup). It leverages the `@taqueria/node-sdk`, following the same development practices as other plugins created by the Pinnacle Labs team for Taqueria.
+The plugin is written in TypeScript and compiled to a JavaScript bundle for Node.js using [tsup](https://github.com/egoist/tsup). It leverages the `@taqueria/node-sdk`, following the same development practices as other plugins created by our team for Taqueria.
