--- a/website/docs/taqueria-dev/contributions.mdx
+++ b/website/docs/taqueria-dev/contributions.mdx
@@ -80,7 +80,7 @@ representative at an online or offline event.
 
 Instances of abusive, harassing, or otherwise unacceptable behavior may be
 reported to the community leaders responsible for enforcement by email at
-[abuse@pinnaclelabs.limited](mailto:abuse@pinnaclelabs.limited) or by contacting administrators and moderators 
+[abuse@taqueria.io](mailto:abuse@taqueria.io) or by contacting administrators and moderators 
 in official community channels.
 All complaints will be reviewed and investigated promptly and fairly.
 
